2011-03-15  Adam Roben  <aroben@apple.com>

Fix a leak in WebStorageTrackerClient::dispatchDidModifyOrigin

        Fixes <http://webkit.org/b/56385> SecurityOrigin leaks seen in
        WebStorageTrackerClient::dispatchDidModifyOrigin

        Reviewed by Antti Koivisto.

        * Storage/WebStorageTrackerClient.mm:
        (WebStorageTrackerClient::dispatchDidModifyOriginOnMainThread): Adopt the reference passed
        to us by dispatchDidModifyOrigin.
        (WebStorageTrackerClient::dispatchDidModifyOrigin): Added a comment and removed an
        unnecessary cast.

git-svn-id: svn://svn.chromium.org/blink/trunk@81150 bbb929c8-8fbe-4397-9dbb-9b2b20218538